cmake_minimum_required(VERSION 3.0)

project( shilina_a_m )

add_subdirectory( complex )
add_subdirectory( rational )
add_subdirectory( vec3d )
add_subdirectory( vec3dT )
add_subdirectory( rect2d )
add_subdirectory( array )
add_subdirectory( matrixU )
add_subdirectory( matrixR )
add_subdirectory( stackL )
add_subdirectory( stackR )
add_subdirectory( priorityQueueL )
add_subdirectory( priorityQueueR )
add_subdirectory( stackLis )